refactor(fcp): Detach FCP request lifecycle from ClientContext